--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -195,12 +195,12 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: x86_64-unknown-linux-gnu
+          targets: x86_64-unknown-linux-musl
 
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev ffmpeg
+          sudo apt-get install -y musl-tools pkg-config libssl-dev ffmpeg
 
       - name: Cache cargo dependencies
         uses: actions/cache@v4
@@ -215,7 +215,7 @@ jobs:
 
       - name: Build Linux binary
         run: |
-          cargo build --release --target x86_64-unknown-linux-gnu
+          cargo build --release --target x86_64-unknown-linux-musl
 
       - name: Get version from Cargo.toml
         id: get_version
@@ -227,7 +227,7 @@ jobs:
       - name: Create Linux package
         run: |
           mkdir compresscli-linux
-          cp target/x86_64-unknown-linux-gnu/release/compresscli compresscli-linux/
+          cp target/x86_64-unknown-linux-musl/release/compresscli compresscli-linux/
           cp README.md compresscli-linux/
           cp LICENSE compresscli-linux/
           echo "CompressCLI v${{ steps.get_version.outputs.version }}" > compresscli-linux/VERSION.txt
